(feat) Add a back button and add updates to Questions Page

--- a/src/index.css
+++ b/src/index.css
@@ -21,4 +21,5 @@
   --color-primary-green: #4AD05C;
   --color-primary-green-dark: #172519;
   --color-midnight: #121212;
+  --color-surface-dark: #1E1E1E;
 }
